<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_search_decice"
            android:icon="@mipmap/ic_action_search"
            android:title="@string/search_decice" />
        <item
            android:id="@+id/nav_status_decive"
            android:icon="@mipmap/ic_action_tick"
            android:title="@string/status_decice" />
        <item
            android:id="@+id/nav_my_device"
            android:icon="@mipmap/ic_action_tiles_small"
            android:title="@string/my_decice" />
    </group>

    <item android:title="@string/more">
        <menu>
            <item
                android:id="@+id/nav_setting"
                android:icon="@mipmap/ic_action_settings"
                android:title="@string/settings" />
        </menu>
    </item>

</menu>
